Fix link overlapping when focused

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -85,10 +85,10 @@
     .entry-list__key {
       width: 1%;
       white-space: nowrap;
-      padding-right: $gutter;
     }
     .entry-list__value {
       width: 100%;
+      padding-left: $gutter;
     }
   }
 }
